--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/index2.css" />
   </head>
-  <body  oncontextmenu="return false">
+  <body>
     <header>
       <ul id="mainUl">
         <li id="search">
@@ -312,24 +312,6 @@
     <script src="js/index.js">
       <i class="fa fa-angle-double-up" aria-hidden="true"></i>
     </script>
-    <script>
-      document.onkeydown = (e) => {
-    if (e.key == 123) {
-        e.preventDefault();
-    }
-    if (e.ctrlKey && e.shiftKey && e.key == 'I') {
-        e.preventDefault();
-    }
-    if (e.ctrlKey && e.shiftKey && e.key == 'C') {
-        e.preventDefault();
-    }
-    if (e.ctrlKey && e.shiftKey && e.key == 'J') {
-        e.preventDefault();
-    }
-    if (e.ctrlKey && e.key == 'U') {
-        e.preventDefault();
-    }
-};
-    </script>
+    
   </body>
 </html>
